Fixed broken route
