# docs/a7_openapi.yaml
@@ -15,7 +15,6 @@ tags:
   - name: 'M03: User Administration and Static pages'
 
 paths:
-DONE
   /login:
     get:
       operationId: R101
@@ -58,12 +57,11 @@ DONE
               examples:
                 302Success:
                   description: 'Successful authentication. Redirect to main questions page.'
-                  value: '/questions/top'
+                  value: '/questions'
                 302Error:
                   description: 'Failed authentication. Redirect to login form.'
                   value: '/login'
  
- DONE
   /logout:
     post:
       operationId: R103
@@ -83,7 +81,6 @@ DONE
                   description: 'Successful logout. Redirect to login form.'
                   value: '/login'
 
-DONE
   /register:
     get:
       operationId: R104
@@ -135,12 +132,11 @@ DONE
               examples:
                 302Success:
                   description: 'Successful authentication. Redirect to main questions page.'
-                  value: '/questions/top'
+                  value: '/questions'
                 302Failure:
                   description: 'Failed authentication. Redirect to register form.'
                   value: '/register'
 
-DONE
   /users/{user}:
     get:
       operationId: R106
@@ -164,12 +160,13 @@ DONE
         '404': 
           description: 'Not Found. User does not exist'
 
-DIOGO
-  /users/{id}:
-    get:
+###################
+
+  /users/{user}/delete:
+    delete:
       operationId: R107
       summary: 'R107: Delete a user.'
-      description: 'Deletes a user. Access: USR'
+      description: 'Deletes a user. Access: ADM'
       tags:
         - 'M01: Authentication and Individual Profile'
 
@@ -184,16 +181,15 @@ DIOGO
         '200':
           description: 'Ok. User deleted with success'
         '403':
-          description: 'Forbidden. User is not logged in or doesn't have permission to delete a user'
+          description: 'Forbidden. User doesn't have permission to delete a user'
         '404': 
           description: 'Not Found. User does not exist'
 
-DIOGO
-  /users/{id}/update:
-    get:
+  /users/{user}/update:
+    patch:
       operationId: R108
       summary: 'R108: Edit users' information.'
-      description: 'Edits information of a user. Access: USR'
+      description: 'Edits information of a user. Access: OWN, ADM'
       tags:
         - 'M01: Authentication and Individual Profile'
 
@@ -205,33 +201,42 @@ DIOGO
           required: true
 
       responses:
-        '200':
-          description: 'Ok. User edited with success'
+        '302':
+          description: 'Redirect after processing the new user information.'
+          headers:
+            Location:
+              schema:
+                type: string
+              examples:
+                302Success:
+                  description: 'Successful authentication. Redirect to main questions page.'
+                  value: '/questions'
+                302Failure:
+                  description: 'Failed authentication. Redirect to register form.'
+                  value: '/register'
+
         '403':
-          description: 'Forbidden. User is not logged in or doesn't have permission to edit a users' information'
+          description: 'Forbidden. User is not logged in or doesn't have permission to edit the users' information'
         '404': 
           description: 'Not Found. User does not exist'
           
-DIOGO
   /user/create:
     get:
       operationId: R109
-      summary: 'R109: Create a user.'
-      description: 'Creates a user. Access: ADM'
+      summary: 'R109: Shows user creation form.'
+      description: 'Shows the form for creating a new user. Access: ADM'
       tags:
         - 'M01: Authentication and Individual Profile'
 
       responses:
-        '200':
+        '302':
           description: 'Ok. User created with success'
-        '404': 
-          description: 'Not Found. User does not exist'
 
 DIOGO
   /user/store:
-    get:
+    post:
       operationId: R110
-      summary: 'R110: Stores a user.'
+      summary: 'R110: Store a user.'
       description: 'Stores a user. Access: ADM'
       tags:
         - 'M01: Authentication and Individual Profile'
@@ -243,7 +248,7 @@ DIOGO
           description: 'Not Found. User does not exist'
 
 DONE
-  /questions/top:
+  /questions:
     get:
       operationId: R201
       summary: 'R201: View top questions.'
@@ -255,7 +260,7 @@ DONE
         '200':
           description: 'Ok. Show view top questions UI'
 
-  DONE
+DONE
   /questions/{question}:
     get:
       operationId: R202
@@ -278,10 +283,10 @@ DONE
           description: 'Not Found. Question does not exist'
 
   TODO CONFIRMAR CREATE QUESTION
-  /question/create:
+  /questions/create:
     post: 
       operationId: R203
-      summary: 'R203: Create a question.'
+      summary: 'R203: Create question.'
       description: 'Create a new question. Access: USR'
       tags: 
         - 'M02: Content'
@@ -316,16 +321,95 @@ DONE
         '403':
           description: 'Forbidden. User is not logged in and is not allowed to post a question'
 
+Eduardo
+  /questions/edit:
+    patch:
+      operationId: R204
+      summary: 'R204: Edit question'
+      description: 'Edit an existing question. Access: OWN, ADM'
+      tags: 
+        - 'M02: Content'    
       
-      
+      responses:
+        '200':
+          description: 'Ok. Show editted question page.'
+Eduardo
+  /questions/delete:
+    delete:
+      operationId: R205
+      summary: 'R025: Delete a question.'
+      description: 'Delete an existing question. Access: OWN, ADM'
+      tags:
+        - 'M02: Content'
+
+      responses:
+        '302':
+          description: 'Redirect after processing the new question information.'
+          headers:
+            Location:
+              schema:
+                type: string
+              examples:
+                302:
+                  description: 'Successful deletion. Redirect to the top questions page.'
+                  value: '/questions'
+
+Eduardo
+  /answers/create:
+    post:
+      operationId: R206
+      summary: 'R206: Create answer.'
+      description: 'Create a new answer. Access: USR'
+
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                body:
+                  type: string
+              required:
+                - body
+
+
+      responses:
+        '200':
+          'Ok. Show question page where the answer was created'
+        '403':
+          description: 'Forbidden. User is not logged in and is not allowed to post an answer.'
+
+Eduardo
+  /answers/edit:
+    patch:
+      operationId: R207
+      summary: 'R207: Edit answer.'
+      description: 'Edit an existing answer. Access: OWN, ADM'
+
+      responses:
+        '200':
+          description: 'Ok. Show the question page of the editted answer.'
+
+
+Eduardo
+  /answers/delete:
+    delete:  
+      operationId: R208
+      summary: '208: Delete answer.'
+      description: 'Deleting an existing answer. Access: OWN, ADM'               
+
+      responses:
+        '200':
+          description: 'Ok. Show the question page of the deleted question.'
 
 
 Eduardo
   /admin/users:
     get:
       operationId: R301
-      summary: 'R301: View admin page. Access: ADM'
-      description: 'View table of users of web application with action options.'
+      summary: 'R301: View admin page.'
+      description: 'View table of users of web application with action options. Access: ADM'
       tags:
         - 'M03: User Administration and Static pages'
 
@@ -337,8 +421,8 @@ Eduardo
   /admin/users/{id}/promote:
     patch:
       operationId: R302
-      summary: 'R302: Promote an user. Access: ADM'
-      description: 'Promote an user from the table of users.'
+      summary: 'R302: Promote an user.'
+      description: 'Promote an user from the table of users. Access: ADM'
       tags:  
         - 'M03: User Administration and Static pages'
 
@@ -350,8 +434,8 @@ Eduardo
   /admin/users/{id}/demote:
     patch: 
       operationId: R303
-      summary: 'R303: Demote an user. access: ADM'
-      description: 'Demote an user from the table of users.'
+      summary: 'R303: Demote an user.'
+      description: 'Demote an user from the table of users. Access: ADM'
       tags:
         - 'M03: User Administration and Static pages'
 
@@ -363,21 +447,24 @@ Eduardo
   /admin/users/{id}/edit:
     get:
       operationId: R304
-      summary: 'R304: Edit an user profile. access: ADM'
-      description: 'Edit an user's profile from the table of users.'
+      summary: 'R304: Edit an user profile.'
+      description: 'Edit an user`s profile from the table of users. Access: ADM'
       tags:
-        - 'M03: User Administration and Stati pages'
+        - 'M03: User Administration and Static pages'
     
       responses:
         '200':
-          description: 'Ok. Show admin page'
-
-
-
-
-
-
-
+          description: 'Ok. Show edit profile page.'
+        '302':
+          description: 'Redirecting you to the admin page.'
+          headers:
+            Location:
+              schema:
+                type: string
+              examples:
+                302:
+                  description: 'Successful edition. Redirect to admin page.'
+                  value: '/admin/users'
 
 
   /api/works:
